--- a/Admin/src/app/Components/reports/reports.component.html
+++ b/Admin/src/app/Components/reports/reports.component.html
@@ -76,7 +76,7 @@
                 <div class="col-8">
                   <h5 class="card-title mb-9 fw-semibold">Revenue</h5>
                   <h4 class="fw-semibold mb-3">
-                    ${{ stats.totalReservationPrice * 0.1 }}
+                    ${{ (stats.totalReservationPrice * 0.1).toFixed(2) }}
                   </h4>
                   <div class="d-flex align-items-center pb-1">
                     <span
